--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,27 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .appForm {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 30px;
   width: 500px;
   padding: 50px 50px;
   border-radius: 10px;
   -webkit-box-shadow: 0px 6px 20px 0px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 6px 20px 0px rgba(34, 60, 80, 0.2);
+          box-shadow: 0px 6px 20px 0px rgba(34, 60, 80, 0.2);
 }
 
 .appForm__heading {
@@ -59,14 +58,14 @@
 
 .appForm__data:hover {
   -webkit-box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
-  box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
+          box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
 .appForm__data:focus {
   -webkit-box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
-  box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
+          box-shadow: 0px 3px 10px 0px rgba(4, 60, 80, 0.2);
 }
 
 .appForm__data::-webkit-input-placeholder {
@@ -106,8 +105,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .appForm__check {
@@ -128,6 +127,7 @@
   font-family: system-ui;
   color: #5a67d8;
   font-weight: 500;
+  font-size: 16px;
 }
 
 .appForm__helpPass:hover {
@@ -154,4 +154,78 @@
   transition: 0.5s;
 }
 
+@media (max-width: 1023px) {
+  .appForm {
+    width: 400px;
+  }
+  .appForm__heading {
+    font-size: 28px;
+  }
+  .appForm__data {
+    height: 55px;
+  }
+  .appForm__check {
+    width: 14px;
+    height: 14px;
+  }
+  .appForm__signIn {
+    padding: 6px;
+    font-size: 21px;
+  }
+}
+
+@media (max-width: 767px) {
+  .appForm {
+    width: 300px;
+  }
+  .appForm__heading {
+    font-size: 21px;
+  }
+  .appForm__prompt {
+    font-size: 14px;
+  }
+  .appForm__data {
+    height: 35px;
+    border-bottom: 3px solid #e2e8f0;
+    padding: 6px 4px 0 6px;
+    font-size: 14px;
+    font-weight: 300;
+  }
+  .appForm__data:hover {
+    -webkit-box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+            box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+  }
+  .appForm__data:focus {
+    -webkit-box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+            box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+  }
+  .appForm__data::-webkit-input-placeholder {
+    font-size: 14px;
+  }
+  .appForm__data:-ms-input-placeholder {
+    font-size: 14px;
+  }
+  .appForm__data::-ms-input-placeholder {
+    font-size: 14px;
+  }
+  .appForm__data::placeholder {
+    font-size: 14px;
+  }
+  .appForm__check {
+    width: 16px;
+    height: 16px;
+  }
+  .appForm__labelPass {
+    font-size: 14px;
+    margin-left: 5px;
+    font-weight: 500;
+  }
+  .appForm__helpPass {
+    font-size: 14px;
+  }
+  .appForm__signIn {
+    padding: 6px;
+    font-size: 18px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
