--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,6 @@
 $FontProject: system-ui;
-
+$desctopFontSize: 16px;
+$mobileFontSize: 14px;
 
 .app {
     min-height: 100vh;
@@ -43,7 +44,7 @@ $FontProject: system-ui;
         padding: 10px 8px 0 10px;
         font-weight: 500;
         font-family: $FontProject;
-        font-size: 16px;
+        font-size: $desctopFontSize;
         transition: 0.5s;
 
         &:hover {
@@ -60,7 +61,7 @@ $FontProject: system-ui;
             font-weight: bold;
             font-family: $FontProject;
             position: absolute;
-            font-size: 16px;
+            font-size: $desctopFontSize;
 
         }
     }
@@ -78,7 +79,7 @@ $FontProject: system-ui;
 
     &__labelPass {
         font-family: $FontProject;
-        font-size: 16px;
+        font-size: $desctopFontSize;
         margin-left: 5px;
         font-weight: 500;
     }
@@ -89,6 +90,7 @@ $FontProject: system-ui;
         font-family: $FontProject;
         color: #5a67d8;
         font-weight: 500;
+        font-size: $desctopFontSize;
 
         &:hover {
             color: #3e4dd4;
@@ -113,5 +115,88 @@ $FontProject: system-ui;
             transition: 0.5s;
         }
 
+    }
+}
+
+@media (max-width:1023px) {
+    .appForm {
+        width: 400px;
+
+        &__heading {
+            font-size: 28px;
+        }
+
+
+        &__data {
+            height: 55px;
+        }
+
+        &__check {
+            width: 14px;
+            height: 14px;
+        }
+
+
+        &__signIn {
+            padding: 6px;
+            font-size: 21px;
+        }
+    }
+}
+
+@media (max-width:767px) {
+    .appForm {
+        width: 300px;
+
+        &__heading {
+            font-size: 21px;
+        }
+
+        &__prompt {
+            font-size: 14px;
+        }
+
+        &__data {
+            height: 35px;
+            border-bottom: 3px solid #e2e8f0;
+            padding: 6px 4px 0 6px;
+            font-size: 14px;
+            font-weight: 300;
+
+            &:hover {
+                box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+            }
+
+            &:focus {
+                box-shadow: 0px 3px 6px 0px rgba(4, 60, 80, 0.2);
+            }
+
+            &::placeholder {
+                font-size: 14px;
+
+            }
+        }
+
+
+
+        &__check {
+            width: 16px;
+            height: 16px;
+        }
+
+        &__labelPass {
+            font-size: 14px;
+            margin-left: 5px;
+            font-weight: 500;
+        }
+
+        &__helpPass {
+            font-size: 14px;
+        }
+
+        &__signIn {
+            padding: 6px;
+            font-size: 18px;
+        }
     }
 }
